fixes mobile spacing of content pages from the top as well as fixes gallery page mobile gallery button

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,9 @@
   width: 100%;
   top: 100px;
 }
+
+@media only screen and (max-width: 800px){
+.switch-wrapper > div {
+  top: 80px;
+}
+}
