--- a/src/Components/Gallery/GalleryPage/GalleryContent/GalleryContent.module.css
+++ b/src/Components/Gallery/GalleryPage/GalleryContent/GalleryContent.module.css
@@ -17,7 +17,7 @@
 }
 
 .GalleryContent p {
-    font-size: 1.2em;
+    font-size: 1.4em;
     text-transform: uppercase;
     color: gray;
     margin: 0 30px;
@@ -39,6 +39,7 @@
 @media (max-width: 800px) {
     .GalleryContent p {
         display: inline-block;
-        font-weight: bold;
+        font-weight: 600;
+        font-size: 1.4em;
     }
 }
