--- a/src/Components/Gallery/GalleryPage/GalleryNav/GalleryNav.module.css
+++ b/src/Components/Gallery/GalleryPage/GalleryNav/GalleryNav.module.css
@@ -67,7 +67,7 @@
     position: absolute;
     padding: 0;
     height: auto;
-    width: 167px;
+    width: 182px;
     top: 13px;
     right: 30px;
     background-color: white;
