--- a/src/Components/Navigation/Navigation.module.css
+++ b/src/Components/Navigation/Navigation.module.css
@@ -9,6 +9,7 @@
 }
 
 .navMenu {
+  font-size: 1.4em;
   font-weight: 600;
   display: flex;
   box-shadow: 2px 4px 8px 0px rgba(192, 192, 192, 0.185);
@@ -48,7 +49,6 @@
 .NavLink {
   text-decoration: none;
   color: gray;
-  font-size: 20px;
   text-transform: uppercase;
   transition: 0.5s;
   padding: 8px;
@@ -57,7 +57,6 @@
 
 .navMenu p {
   color: gray;
-  font-size: 20px;
 }
 
 .NavLink:hover {
@@ -84,7 +83,7 @@
     height: 80px;
   }
   .iconBar p {
-    font-size: 20px;
+    font-size: 1.2em;
   }
 
   .ul{
