--- a/src/Components/Process/ServiceChunk/ServiceChunk.module.css
+++ b/src/Components/Process/ServiceChunk/ServiceChunk.module.css
@@ -41,3 +41,9 @@
     margin: 0 auto;
 }
 
+@media only screen and (max-width: 800px){
+    .ServiceChunk {
+        display: block;
+    }
+}
+
